--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
 {% block navbar %}
     <div class="container mb-3">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
             <a class="navbar-brand" href="{{ url_for('index') }}">covip</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -18,6 +19,13 @@
                     <li class="nav-item active">
                         <a class="nav-link" href="{{ url_for('about') }}">about</a>
                     </li>
+
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ url_for('data_analysis') }}">data</a>
+                    </li>
+                </ul>
+
+
             </div>
 
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
@@ -30,7 +38,7 @@
 
                     {% else %}
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">profile</a>
+                        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">dashboard</a>
                     </li>
                     {% if current_user.admin %}
                     <li class="nav-item active">
