--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,6 +3,10 @@
 
 {% block app_content %}
 
+<div class="jumbotron">
+    <h1 class="display-4">Your Total Points: {{contributionPoints}}</h1>
+</div>
+
 <div class="card">
     <div class="card-body">
         <h1 class="card-title">Policy Submission</h1>
