--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
                     <li class="nav-item active">
-                        <a class="nav-link" href="{{ url_for('about') }}">about</a>
+                        <a class="nav-link" href="{{ url_for('leaderboard') }}">leaderboard</a>
                     </li>
 
                     <li class="nav-item active">
