--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="jumbotron">
-    <h1 class="display-4">YOUR POLICIES:</h1>
+    <h1 class="display-4">Your Policies:</h1>
 
         {% for title, description in tupList %}
         <div class="container p-3 my-3 bg-dark text-white">
